gitops/apps/iam/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rws-keycloak-service
  namespace: iam
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: http-direct
      port: 8080
      targetPort: 8080
    - name: http-management
      port: 9000
      targetPort: 9000
