gitops/apps/iam/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: iam
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: kc.4.245.81.5.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rws-keycloak-service
                port:
                  number: 80
